# hegel-rust

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  RELEASE.md  build.rs  flake.nix  justfile
.github/scripts/: bump_hegel_core.py  release.py
.github/workflows/: check.yml  ci.yml  conformance.yml  coverage.yml  nix.yml  release.yml
docs/: getting-started.md
examples/: die_hard.rs  embedded_test.rs  ledger.rs  min_stack.rs
hegel-derive/: Cargo.toml
hegel-derive/src/: enum_gen.rs  hegel_test.rs  lib.rs
hegel-macros/: Cargo.toml
hegel-macros/src/: composite.rs  enum_gen.rs  hegel_test.rs  lib.rs  stateful.rs  struct_gen.rs
nix/: flake.nix
scripts/: check-coverage.py
src/: antithesis.rs  control.rs  embedded.rs  gen.rs  lib.rs  local_backend.rs  runner.rs  stateful.rs  test_case.rs
src/generators/: collections.rs  combinators.rs  compose.rs  data.rs  default.rs  from_type.rs  generators.rs  misc.rs  mod.rs  numeric.rs  random.rs  strings.rs  tuples.rs  value.rs
src/protocol/: channel.rs  connection.rs
tests/: flaky_global_state.rs  integers.rs  integers_bounds.rs  property_tests.rs  test_antithesis.rs  test_arrays.rs  test_collections.rs  test_combinators.rs  test_compose.rs  test_composite.rs  test_database_key.rs  test_derive_compile.rs  test_error_handling.rs  test_float_provider_probe.rs  test_health_check.rs  test_hegel_test.rs  test_lifetimes.rs  test_output.rs  test_rust_core_feature.rs  test_stateful.rs  test_target.rs  test_tuples.rs  test_validation.rs
tests/common/: project.rs  utils.rs
tests/conformance/: test_conformance.py
(+8 files in other folders)
